working reboot command